<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.question6">


    <TextView
        android:id="@+id/title6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/question6"
        tools:fontFamily="sans-serif-condensed" />

    <TextView
        android:id="@+id/question_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/question_6_text"
        tools:fontFamily="sans-serif-condensed" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/question_6_answer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/question_6_answer_1" />

        <RadioButton
            android:id="@+id/question_6_answer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/question_6_answer_2" />

        <RadioButton
            android:id="@+id/question_6_answer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/question_6_answer_3" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/question_1_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:onClick="onClickBack"
            android:text="@string/question_1_back_button" />

        <Button
            android:id="@+id/question_6_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:onClick="onClickSubmitAnswer"
            android:text="@string/question_6_submit_button" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />


</LinearLayout>
