<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.question3">


    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/question3"
        tools:fontFamily="sans-serif-condensed" />

    <TextView
        android:id="@+id/question_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/question_3_text"
        tools:fontFamily="sans-serif-condensed" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/question_3_answer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/question_3_answer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/question_3_answer_1" />

        <RadioButton

            android:id="@+id/question_3_answer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/question_3_answer_2" />

        <RadioButton

            android:id="@+id/question_3_answer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/question_3_answer_3" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/question_1_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:onClick="goToQuestion4"
            android:text="@string/question_1_next_button" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />


</LinearLayout>
