<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.question2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/question2"
                tools:fontFamily="sans-serif-condensed" />

            <TextView
                android:id="@+id/question_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/question_2_text"
                tools:fontFamily="sans-serif-condensed" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/question_2_answer"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_2_answer_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/question_2_answer_1" />

                <RadioButton
                    android:id="@+id/question_2_answer_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/question_2_answer_2" />

                <RadioButton
                    android:id="@+id/question_2_answer_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/question_2_answer_3" />
            </RadioGroup>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/question_1_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:onClick="goToQuestion3"
                android:text="@string/question_1_next_button" />


        </LinearLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

    </LinearLayout>
</LinearLayout>
